# prepositional-verb-identifier

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
prev/: __init__.py  main.py  prev.py  util.py
src/prev/: __init__.py  about.py  depmatch_runner.py  main.py  nlp.py  parser.py  prev.py  querier.py  tokenize_runner.py  util.py
